# PhishCollector

./: .env  README.md  docker-compose.yml
.github/workflows/: release.yml
client/: Dockerfile  index.html  package-lock.json  package.json  startup.sh  tsconfig.json  vite.config.ts
client/src/: main.tsx
client/src/analyze/: Analyze.tsx  index.html  main.tsx
client/src/collected/: Collected.css  Collected.tsx  CollectedState.ts  index.css  index.html  main.tsx
client/src/components/: Drawer.tsx  TitleHeader.tsx
client/src/home/: Home.css  Home.tsx  HomeState.tsx  index.html  main.tsx
client/src/settings/: Settings.css  Settings.tsx  index.html  main.tsx
client/src/utils/: extension.ts  gsb.ts  server.tsx  sleep.ts  url.ts
collector/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  startup.sh
collector/src/: app.py
collector/src/crawler/: crawler.py  utils.py
collector/src/routes/: collected.py  crawler.py
