[tool.poetry]
name = "collector"
version = "1.2.1"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.111.0"
uvicorn = { extras = ["standard"], version = "0.29.0" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
