[tool.poetry]
name = "collector"
version = "1.3.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.111.0"
uvicorn = { extras = ["standard"], version = "0.30.1" }
playwright = "1.44.0"
playwright-stealth = "1.0.6"
setuptools = "70.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
